proc-macro-workshop/derive_builder/tests/08-unrecognized-attribute.stderr
error: expected `builder(each = "...")`
  --> tests/08-unrecognized-attribute.rs:22:5
   |
22 |   #[builder(eac = "arg")]
   |     ^^^^^^^^^^^^^^^^^^^^
